# sqlalchemy-tutorial

./: .gitignore  README.md  pyproject.toml
scripts/: create_db.py  locustfile.py  prepare_data.py
src/: app.py  database.py  domains.py  models.py
tests/: conftest.py  test-posgres-db.yaml  test_async_scope_session.py  test_connection_pool.py  test_relationship.py  test_session.py
